--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn
 
 # testing
 /coverage
@@ -24,6 +25,7 @@ cypress/fixtures/example.json
 .eslintcache
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
